[gd_scene load_steps=3 format=3 uid="uid://c5wf6yy6ct1wm"]

[ext_resource type="Script" path="res://scenes/ui/settings.gd" id="1_roxhi"]

[sub_resource type="Theme" id="Theme_4ht2k"]

[node name="SettingsControls" type="CanvasLayer"]
script = ExtResource("1_roxhi")

[node name="ViewPort" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Pane" type="Control" parent="ViewPort"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -820.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ViewPort/Pane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.941176)

[node name="MarginContainer" type="MarginContainer" parent="ViewPort/Pane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4ht2k")
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ViewPort/Pane/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="ViewPort/Pane/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 3

[node name="WorldPositionLabel" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pos"

[node name="WorldPositionValue" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WorldPositionText" type="TextEdit" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="SeedLabel" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Seed"

[node name="NoiseSeedSlider" type="HSlider" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 10.0

[node name="NoiseSeedText" type="TextEdit" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="FrequencyLabel" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Freq
"

[node name="FrequencySlider" type="HSlider" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 0.1
step = 0.001

[node name="FrequencyText" type="TextEdit" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="OctaveLabel" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Octa"

[node name="OctaveSlider" type="HSlider" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 10.0

[node name="OctaveText" type="TextEdit" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="LacunarityLabel" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Lacu
"

[node name="LacunaritySlider" type="HSlider" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 50.0
step = 0.1

[node name="LacunarityText" type="TextEdit" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="GainLabel" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Gain"

[node name="GainSlider" type="HSlider" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="GainText" type="TextEdit" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="PersistenceLabel" type="Label" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pers"

[node name="PersistenceSlider" type="HSlider" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 5.0
step = 0.01

[node name="PersistenceText" type="TextEdit" parent="ViewPort/Pane/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
